[package]
name = "rocket_tls_postgres_pool"
version = "0.1.0"
edition = "2021"
authors = ["Tim Anderson <crates@timando.net>"]
description = "Postgres TLS support for Rocket database pool"
repository = "https://github.com/timando/rocket_tls_postgres_pool"
license = "MIT OR Apache-2.0"
keywords = ["rocket", "framework", "database", "pools"]

[features]
rustls = ["dep:rustls", "tokio-postgres-rustls", "rustls-pemfile"]
native-tls = ["dep:native-tls", "postgres-native-tls"]

[dependencies.log]
version = "0.4"
default-features = false

[dependencies.rocket]
version = "0.5"
default-features = false

[dependencies.rocket_db_pools]
version = ">=0.1.0, <0.3"
default-features = false
features = ["deadpool_postgres"]

[dependencies.tokio-postgres]
version = "0.7"
default-features = false

[dependencies.tokio-postgres-rustls]
version = "0.13"
optional = true

[dependencies.rustls]
version = "0.23"
optional = true

[dependencies.rustls-pemfile]
version = "2"
optional = true

[dependencies.native-tls]
version = "0.2"
optional = true

[dependencies.postgres-native-tls]
version = "0.5"
optional = true
